# patient-readmission-predictor

./: .gitignore  README..md  README.md  create_database.py  pyproject.toml  requirements.txt  train_models.py
backend/: main.py
data_clean/: clean_data.py
database/: patients.db
frontend/: app.html
models/: classification_report.txt  feature_columns.json
